# security-ai-eval-lab

./: .dev-report-cache.md  .dockerignore  .env.sample  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  flowchart TD.mmd  install.sh  mvp_scope.md  pyproject.toml  repo_structure.md
.github/workflows/: ci.yml  release.yml
agents/: email_threat_agent.py  reliability_adapter.py
datasets/benign/: benign_001.json  benign_002.json  benign_003.json  benign_004.json
datasets/impersonation/: imp_001.json  imp_002.json
datasets/phishing/: phish_001.json  phish_002.json  phish_003.json  phish_004.json
db/: models.py  repository.py  session.py
docs/: architecture.md  dataset_notes.md  integration_boundary.md  mvp-boundaries.md  reuse-plan.md  threat-task.md
docs/adr/: 0001-use-ai-reliability-fw-as-execution-control-plane.md  0002-share-one-postgres-database-with-separate-table-ownership.md  0003-run-deterministic-signal-extraction-before-llm-classification.md  0004-use-a-thin-phaseexecutor-adapter-boundary.md  0005-store-evaluation-results-separately-with-reliability-uuids.md  0006-keep-the-runner-minimal-and-evaluation-focused.md  README.md
docs/diagrams/: architecture.md
evaluation/: db_report.py  metrics.py  report.py  runner.py  support_check.py
examples/: run_eval.py
impl-prompts/: guardrails.md  important-impl-notes.md  launch-security-ai-eval-lab-codex-mini.open.md  prompt-1.claude.md  prompt-2.claude.md  prompt-3.open.md  prompt-5-verification.open.md  task-02-eval-persistence-alignment.open.md  task-03-reliability-adapter.open.md  task-04-runner-and-agent-integration.open.md  task-05-docs-boundary-and-usage.open.md  task-06-verification-and-corrective-sweep.open.md
llm/: anthropic_client.py  openai_client.py
migrations/: env.py
migrations/versions/: 0001_eval_lab_tables.py  0002_move_to_security_eval_schema.py
outputs/demo/live-anthropic-2026-03-23/: anthropic-claude-haiku-4-5-20251001-report.html  anthropic-claude-haiku-4-5-20251001-report.json  anthropic-claude-haiku-4-5-20251001-report.md  report.json  report.md
outputs/demo/live-openai-2026-03-23/: openai-gpt-4o-mini-2024-07-18-report.html  openai-gpt-4o-mini-2024-07-18-report.json  (+1 more)
schemas/: result_schema.json  sample_schema.json
tests/: test_classification_metrics.py  test_llm_client_timeouts.py  test_reporting.py  test_runner_hardening.py  test_support_check.py
