[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "security-ai-eval-lab"
version = "0.1.0"
description = "Evaluation lab for LLM-assisted security investigation tasks."
requires-python = ">=3.11"
dependencies = [
    # Installed from GitHub Release asset. Run before `pip install -e .`:
    #   pip install "https://${REGISTRY_TOKEN}@github.com/ngallodev-software/ai-reliability-fw/releases/download/v0.1.0/ai_reliability_fw-0.1.0-py3-none-any.whl"
    # REGISTRY_TOKEN: GitHub PAT with repo scope.
    "ai-reliability-fw==0.1.0",
    "alembic==1.18.4",
    "openai>=1.0.0",
    "asyncpg==0.30.0",
    "jsonschema==4.26.0",
    "python-dotenv==1.2.2",
    "SQLAlchemy==2.0.48",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "db*", "evaluation*", "signals*", "llm*"]
namespaces = true
